# AgentBridge

./: CONTRIBUTING.md  CORE_FEATURES.md  Dockerfile  ECOSYSTEM.md  FINAL_CHECKLIST.md  FINAL_OVERVIEW.md  FULL_FEATURES.md  FUNCTIONALITY_TESTED.md  GITHUB_PUSH_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTELLIGENT_FEATURES.md  ORGANIZATION.md  PROJECT_STATUS.md  PROMOTION_GUIDE.md  PUSH_INSTRUCTIONS.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  SECURITY_FEATURES.md  WORKFLOW_FEATURES.md  agent_memory.db  community_integrations.md  docker-compose.yml  example_advanced_usage.py  example_comprehensive.py  example_intelligent_features.py  example_security_demo.py  example_template_usage.py  example_usage.py  example_workflow_demo.py  install.sh  push_to_github.sh  pyproject.toml  setup_instructions.md  sync_to_github.sh
agentbridge/: __init__.py  adapter.py  adapters_extended.py  bridge.py  cli.py  config.py  evaluation.py  events.py  intelligence.py  logging.py  memory.py  models.py  plugin.py  protocol.py  security.py  server.py  utils.py  workflow.py
agentbridge/dashboard/: index.html
example_configs/: multi_framework_config.yaml
memory/: 2026-02-05.md
tests/: test_basic.py  test_enhanced.py  test_models.py  test_security.py  test_workflow.py
traces/: traces.db
traces/session_1770279906/: trace_0.json  trace_1.json  trace_2.json
workflow_templates/: data_analysis_workflow.py
